fixed section alignment

--- a/style.css
+++ b/style.css
@@ -63,9 +63,15 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  text-align: right;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+.hourDisplay {
+  text-align: left;
+  display: inline;
 }
